Fixing overflow
Overflow on mobile was wonky.

--- a/assets/css/base/_layout.scss
+++ b/assets/css/base/_layout.scss
@@ -12,4 +12,5 @@ html {
 body {
 	position: relative;
 	min-height: 100%;
+	overflow: hidden;
 }
